--- a/documents/report/doc/implementation.tex
+++ b/documents/report/doc/implementation.tex
@@ -442,4 +442,4 @@ To obtain the most recent time, weather and email, a server backend has been mad
 \end{figure}
 Above in fig. \ref{fig:block_server} a rough sketch of the dataflow is shown
 \section{Software ESP}
-The ESP also had to be programmed, this is done in C++ as that is the most efficient and most supported framework available right now. The ESP relays all the protobuf messages from the xmega to the server backend. Right now this is done via http post requests. This can be optimized by the usage of websockets. However these were not functional yet during the time of development. This could enable ssl encryption to make it safer for sending sensitive data, and a more real time stream could be set up. Although the ESP is programmed in C++, a C version of protobuf has been used. This way it was possible to reuse the code already written for the xmega.
+The ESP also had to be programmed, this is done in C++ as that is the most efficient and most supported framework available right now. The ESP relays all the protobuf messages from the xmega to the server backend. Right now this is done via http post requests. This can be optimized by the usage of websockets. However these were not functional yet during the time of development. This could enable ssl encryption to make it safer for sending sensitive data, and a more real time stream could be set up. Although the ESP is programmed in C++, a C version of protobuf has been used. This way it was possible to reuse the code already written for the xmega. A website also has been developed. This way the user can connect to the access point and set up the alarm, city, wifi connection and information shown. The website was created using html, css, javascript, bootstrap and jquerry. All made responsive for both phone and computer accessibility.
