--- a/documents/report/doc/implementation.tex
+++ b/documents/report/doc/implementation.tex
@@ -109,7 +109,7 @@ An external crystal is used for the real time clock. This gives the possibility 
 The full schematics can be found in Appendix \ref{append:logic}.
 
 \section{Software Interfaces}
-As can be seen from the hardware, there are two systems that have to communicate with each other. Not only that, but its also needed to talk with a server back-end. The choice has been made to use Protobuf in order to save time. Protobuf, short for Protocol buffers, are a language-neutral, platform-neutral extensible mechanism for serializing structured data developed and maintained by google https://developers.google.com/protocol-buffers/. This translates message structures in language dependent types. In C the messages are translated into structs, where the messages are translated into Objects in Java.
+As can be seen from the hardware, there are two systems that have to communicate with each other. Not only that, but its also needed to talk with a server back-end. The choice has been made to use Protobuf in order to save time. Protobuf, short for Protocol buffers, are a language-neutral, platform-neutral extensible mechanism for serializing structured data developed and maintained by google \ref{github:gpb}. This translates message structures in language dependent types. In C the messages are translated into structs, where the messages are translated into Objects in Java.
 \section{Software Microcontroller}
 \label{sec:software}
 In order to facilitate all the functionality, code had to be written. Because the system is quite complex with many different functions, a good and clear structure has to be realized. Much of the development time has been invested in the writing and testing of underlying code which doesn’t have a direct result for the finalized product. In the following sub-chapters this system will be described, and explained why certain choices and compromises have been made.\\
@@ -127,7 +127,7 @@ To make this layered code structure a reality, a small operating system has been
 \subsection{Operating System}
 To make the previously discussed layering possible with communication, a small operating system has been developed with a minimum subset of functions. This subset is divided in two parts, Events and Modules.
 \subsubsection{Module}
-The modular system is realized by a struct. Every module contains a name, a usage counter, initialize and deinitialize functions, and dependencies. A module can be initialized by the "module\_init" function. This function will check for all the dependencies, whether they are already initialized. If this is not the case, it will be initialized including all the dependencies of the dependency. The "module\_init" function will also call the initialize function, which can be used for a module to set up registers for example. Once a module is not needed anymore, it can be deinitialized with the "module\_deinit" function. This function will decrease the usage counter for every dependency, and once a dependency is not used anymore it will also be deinitialized. This function also calls the deinitialize function of the given module.
+The modular system is realized by a struct. Every module contains a name, a usage counter, initialize and deinitialize functions, and dependencies. A module can be initialized by the "module\_init" function. This function will check for all the dependencies, whether they are already initialized. If this is not the case, it will be initialized including all the dependencies of the dependency. The "module\_init" function will also call the initialize function, which can be used for a module to set up registers for example. Once a module is not needed anymore, it can be de-initialized with the "module\_deinit" function. This function will decrease the usage counter for every dependency, and once a dependency is not used anymore it will also be de-initialized. This function also calls the de-initialize function of the given module.
 
 \begin{minted}[baselinestretch=1, fontsize=\small, linenos,frame=single,framesep=5pt]{C}
 #define MODULE_DEFINE(VAR, DESC, INIT, DEINIT, ...)     \
@@ -425,7 +425,7 @@ The status application draws the status bar. This reflects whether the alarm is 
 \subsubsection{Console}
 The console application controls the screen terminal, in the future it will also be capable of receiving commands over WI-FI, however that functionality is not in yet due to time constraints.
 \subsubsection{Core}
-The Core translates all the commands given to actions, places gui elements on the screen, and has the possibility to enable and disable applications. Currently this results in fig. \ref{fig:clock_weather} below. All the applications have their own green bounding box space
+The Core translates all the commands given to actions, places graphical user interface elements on the screen, and has the possibility to enable and disable applications. Currently this results in fig. \ref{fig:clock_weather} below. All the applications have their own green bounding box space
 \begin{figure}[H]
 	\centering
 	\label{fig:clock_weather}
@@ -433,7 +433,7 @@ The Core translates all the commands given to actions, places gui elements on th
 	\caption{Displaying basic functionality}
 \end{figure}
 \section{Software Server}
-To obtain the most recent time, weather and email, a server backend has been made. This server backend is accessible trough a RESTful interface. An application can fire post requests with protobuf messages in the body. This will be decoded on the server and the right response will be given. The server backend is written in Java, and hosted on a Platform as a Service (Heroku https://www.heroku.com/ ) . To accelerate RESTful java interface development, the spark framework has been chosen to develop with http://sparkjava.com/ . Right now the server takes care of time and timezones, weather and email. The time is obtained based on location. The user will provide a city where the weather and time should be based on. This will be translated in a latitude and longitude trough google api's. Google also provides a possibility to return a timezone based on latitude and longitude. The current time is requested from the server and translated with the timezone. Next is the weather, which is requested trough openweathermap https://openweathermap.org/ . This is done once every 30 minutes, whereas the time is updated once every hour. The email functionality is provided trough javax mail http://www.oracle.com/technetwork/java/javamail/index.html . A pitfall here is the use of security, that is something which has to be looked into in a future edition.
+To obtain the most recent time, weather and email, a server back-end has been made. This server back-end is accessible trough a RESTful interface. An application can fire post requests with protobuf messages in the body. This will be decoded on the server and the right response will be given. The server backend is written in Java, and hosted on a Platform as a Service (Heroku \ref{other:heroku}). To accelerate RESTful java interface development, the spark framework has been chosen to develop with Spark \ref{other:spark}. Right now the server takes care of time and timezones, weather and email. The time is obtained based on location. The user will provide a city where the weather and time should be based on. This will be translated in a latitude and longitude trough Google api's. Google also provides a possibility to return a timezone based on latitude and longitude. The current time is requested from the server and translated with the timezone. Next is the weather, which is requested trough openweathermap \ref{other:weathermaps}. This is done once every 30 minutes, whereas the time is updated once every hour. The email functionality is provided trough javax mail \ref{other:javax}. A pitfall here is the use of security, that is something which has to be looked into in a future edition.
 \begin{figure}[H]
 	\centering
 	\label{fig:block_server}
