--- a/documents/report/doc/implementation.tex
+++ b/documents/report/doc/implementation.tex
@@ -433,7 +433,7 @@ The Core translates all the commands given to actions, places graphical user int
 	\caption{Displaying basic functionality}
 \end{figure}
 \section{Software Server}
-To obtain the most recent time, weather and email, a server back-end has been made. This server back-end is accessible trough a RESTful interface. An application can fire post requests with protobuf messages in the body. This will be decoded on the server and the right response will be given. The server backend is written in Java, and hosted on a Platform as a Service (Heroku \ref{other:heroku}). To accelerate RESTful java interface development, the spark framework has been chosen to develop with Spark \ref{other:spark}. Right now the server takes care of time and timezones, weather and email. The time is obtained based on location. The user will provide a city where the weather and time should be based on. This will be translated in a latitude and longitude trough Google api's. Google also provides a possibility to return a timezone based on latitude and longitude. The current time is requested from the server and translated with the timezone. Next is the weather, which is requested trough openweathermap \ref{other:weathermaps}. This is done once every 30 minutes, whereas the time is updated once every hour. The email functionality is provided trough javax mail \ref{other:javax}. A pitfall here is the use of security, that is something which has to be looked into in a future edition.
+To obtain the most recent time, weather and email, a server back-end has been made. This server back-end is accessible trough a RESTful interface. An application can fire post requests with protobuf messages in the body. This will be decoded on the server and the right response will be given. The server backend is written in Java, and hosted on a Platform as a Service (Heroku \cite{other:heroku}). To accelerate RESTful java interface development, the spark framework has been chosen to develop with Spark \cite{other:spark}. Right now the server takes care of time and timezones, weather and email. The time is obtained based on location. The user will provide a city where the weather and time should be based on. This will be translated in a latitude and longitude trough Google api's. Google also provides a possibility to return a timezone based on latitude and longitude. The current time is requested from the server and translated with the timezone. Next is the weather, which is requested trough openweathermap \cite{other:weathermaps}. This is done once every 30 minutes, whereas the time is updated once every hour. The email functionality is provided trough javax mail \cite{other:javax}. A pitfall here is the use of security, that is something which has to be looked into in a future edition.
 \begin{figure}[H]
 	\centering
 	\label{fig:block_server}
