--- a/documents/report/literature.bib
+++ b/documents/report/literature.bib
@@ -58,7 +58,7 @@
 	year          	=  2017,
 	url		= {http://theuplight.com/}
 }
-@online{other:theuplight,
+@online{other:spark,
 	author		= {{\myemph{Spark}}},
 	title         	= {{{Spark framework}}},
 	year          	=  2017,
