--- a/documents/report/doc/implementation.tex
+++ b/documents/report/doc/implementation.tex
@@ -109,7 +109,7 @@ An external crystal is used for the real time clock. This gives the possibility 
 The full schematics can be found in Appendix \ref{append:logic}.
 
 \section{Software Interfaces}
-As can be seen from the hardware, there are two systems that have to communicate with each other. Not only that, but its also needed to talk with a server back-end. The choice has been made to use Protobuf in order to save time. Protobuf, short for Protocol buffers, are a language-neutral, platform-neutral extensible mechanism for serializing structured data developed and maintained by google \ref{github:gpb}. This translates message structures in language dependent types. In C the messages are translated into structs, where the messages are translated into Objects in Java.
+As can be seen from the hardware, there are two systems that have to communicate with each other. Not only that, but its also needed to talk with a server back-end. The choice has been made to use Protobuf in order to save time. Protobuf, short for Protocol buffers, are a language-neutral, platform-neutral extensible mechanism for serializing structured data developed and maintained by google \cite{github:gpb}. This translates message structures in language dependent types. In C the messages are translated into structs, where the messages are translated into Objects in Java.
 \section{Software Microcontroller}
 \label{sec:software}
 In order to facilitate all the functionality, code had to be written. Because the system is quite complex with many different functions, a good and clear structure has to be realized. Much of the development time has been invested in the writing and testing of underlying code which doesn’t have a direct result for the finalized product. In the following sub-chapters this system will be described, and explained why certain choices and compromises have been made.\\
